phan media query chi tablet va mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="search-icon">
-                        <input type="text" class="search" placeholder="Nhập từ khóa tìm kiếm...">
+                        <input type="text" class="search" placeholder="  Nhập từ khóa tìm kiếm...">
                         <img class="icon" src="./img/search1.jpg" alt="">
                     </div>
                 </div>
@@ -100,6 +100,9 @@
                             <p class="text">Giỏ hàng </p>
                         </div>
                     </a>
+                </div>
+                <div class="logo">
+                    <a href=""><img src="./img/google.jpg" alt=""></a>
                 </div>
                 <div class="infor">
                     <div class="gmail">
@@ -236,8 +239,7 @@
                     <a href="">
                         <img src="./img/content/images/content-1_03.jpg" alt="">
                         <p>Ra mắt bí quyết chinh phục đỉnh cao ky thi THPT quốc gia môn lịch sử -35 đề tuyển chọn</p>
-                    </a>
-                    
+                    </a> 
                 </div>
                 <div class="img-text border">
                     <a href="">
