chinh lai responsive

--- a/index.html
+++ b/index.html
@@ -158,6 +158,38 @@
             <a class="general" href=""><li>Tài liệu đã phát hành</li></a>
             <a class="general" href=""><li>Tài liệu cần kiểm duyệt</li></a>
         </ul>
+        <label for="nav-input" class="nav-bar">
+            <i class="fas fa-bars"></i>
+        </label>
+        <input type="checkbox" hidden name="" id="nav-input">
+        <label  for="nav-input" class="nav-overlay"></label>
+        <ul class="menu-small">
+            <label for="nav-input" class="nav-close">
+                <i class="fas fa-times"></i>
+            </lable>
+            <a href="">
+                <li class="home">
+                    <i class="fas fa-home"></i>
+                    <p>Trang chủ</p>
+                </li>
+            </a>
+            <a href="">
+                <li class="category">
+                    <i class="fas fa-bars"></i>
+                    <p>Danh mục tài liệu</p>
+                </li>
+            </a>
+            <a href="">
+                <li class="category">
+                    <i class="fas fa-bars"></i>
+                    <p>Danh mục tác giả</p>
+                </li>
+            </a>
+            <a class="general" href=""><li>Tin tức</li></a>
+            <a class="general" href=""><li>Tài liệu giảm giá</li></a>
+            <a class="general" href=""><li>Tài liệu đã phát hành</li></a>
+            <a class="general" href=""><li>Tài liệu cần kiểm duyệt</li></a>
+        </ul>
     </div>
     <div id="content">
         <div class="left">
@@ -233,6 +265,7 @@
         </div>
         <div class="right">
             <div class="content-section">
+                <div class="text">TIN TỨC NỔI BẬT</div>
                 <div class="img-text border-first">
                     <a href="">
                         <img src="./img/content/images/content-1_03.jpg" alt="">
@@ -257,7 +290,6 @@
                         <p>Quy định phương thức làm tròn điểm thi THPT quốc gia 2019</p>
                     </a>
                 </div>
-                <div class="text">TIN TỨC NỔI BẬT</div>
             </div>
         </div>
     </div>
@@ -304,7 +336,7 @@
                 </div>
             </a>
             <a href="">
-                <div class="coll center">
+                <div class="coll ">
                     <div class="img">
                         <img src="./img/sourse-list/images/c2-10.jpg" alt="">
                     </div>
@@ -491,7 +523,7 @@
                 </div>
             </a>
             <a href="">
-                <div class="coll center">
+                <div class="coll">
                     <div class="img">
                         <img src="./img/sourse-list/images/c7.jpg" alt="">
                     </div>
@@ -604,7 +636,7 @@
                 </div>
              </a>
             <a href="">
-                <div class="coll center">
+                <div class="coll">
                     <div class="img">
                         <img src="./img/sourse-list/images/c2-10.jpg" alt="">
                     </div>
@@ -754,7 +786,7 @@
                 </div>
              </a>
             <a href="">
-                <div class="coll center">
+                <div class="coll ">
                     <div class="img">
                         <img src="./img/sourse-list/images/c14.jpg" alt="">
                     </div>
