sua loi hien thi khi responsive

--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                     <a href=""><p>ĐẶT MUA</p></a>
                 </div>
             </div>
-            <div class="coll right">
+            <div class="coll">
                 <div class="img">
                     <img src="./img/sourse-list/images/c4-12.jpg" alt="">
                 </div>
@@ -996,6 +996,7 @@
                     <a href=""><p>ĐẶT MUA</p></a>
                 </div>
             </div>
+            <div class="coll last-child"></div>
         </div>
     </div>
     <div id="infor-warning">
